# print_and_log

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs
