[package]
name = "print_and_log"
version = "0.1.0"
authors = ["FaultierSP <faultiersp@decreation.org>"]
edition = "2021"
description = "A crate for printing and logging messages with timestamps."
license = "MIT"
repository = "https://github.com/FaultierSP/print_and_log"


[dependencies]
chrono = "0.4.38"
colored = "2.1.0"